# RealOne

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  main.rs  state.rs
src/hash/: algo.rs  compute.rs  io.rs  mod.rs  wrappers.rs
src/ui/: colors.rs  mod.rs  styles.rs  theme.rs  views.rs  windows.rs
