[package]
name = "realone"
version = "0.9.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
iced-multi-window = "2.0"
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
crc32fast = "1.5"
adler32 = "1.2"
hex = "0.4"
md4 = "0.10"
tiger = "0.2"
whirlpool = "0.10"
gost94 = "0.10"
digest = "0.10"
rfd = "0.16"
memmap2 = "0.9"
async-std = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
base64 = "0.22.1"
arboard = "3.6"
